use actual MDOX profiles instead of dummy counter